File: added new basic level design file json